--- a/src/app/modules/author/author.component.html
+++ b/src/app/modules/author/author.component.html
@@ -1,1 +1,64 @@
-<p>author works!</p>
+<h1>Autores</h1>
+<div class="d-flex justify-content-between align-items-center">
+    <mat-form-field appearance="outline">
+        <mat-label>Buscar</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Ejm: Gabriel" #input>
+        <mat-hint style="color: #a3a3a3;">Buscado por Nombre</mat-hint>
+    </mat-form-field>
+    <mat-form-field appearance="outline">
+        <mat-label>Buscar</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Ejm: García" #input>
+        <mat-hint style="color: #a3a3a3;">Buscado por Apellido</mat-hint>
+    </mat-form-field>
+    <div class="d-flex gap-2">
+        <button type="button" class="btn btn-dark" (click)="toggleStatus()">{{txtStatus}}</button>
+        <button type="button" class="btn btn-success" (click)="openSaveModal()" [disabled]="txtStatus=='Activos'">Nuevo Autor</button>
+    </div>
+</div>
+<div class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)">
+        <ng-container matColumnDef="fullname">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre Completo </th>
+            <td mat-cell *matCellDef="let element"> {{element.fullname}} </td>
+        </ng-container>
+        <ng-container matColumnDef="country">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Nacionalidad </th>
+            <td mat-cell *matCellDef="let element"> {{element.country.names}} </td>
+        </ng-container>
+        <ng-container matColumnDef="accion">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
+            <td mat-cell *matCellDef="let element">
+                <button mat-icon-button [matMenuTriggerFor]="menu">
+                    <mat-icon>more_vert</mat-icon>
+                </button>
+                <mat-menu #menu="matMenu">
+                    <div *ngIf="txtStatus=='Inactivos'; else btnInactive">
+                        <button mat-menu-item (click)="openSaveModal(element)">
+                            <mat-icon>edit</mat-icon>
+                            <span>Editar</span>
+                        </button>
+                        <button mat-menu-item (click)="removed(element)">
+                            <mat-icon>delete</mat-icon>
+                            <span>Eliminar</span>
+                        </button>
+                    </div>
+                    <ng-template #btnInactive>
+                        <button mat-menu-item (click)="restore(element)">
+                            <mat-icon>restore</mat-icon>
+                            <span>Restaurar</span>
+                        </button>
+                        <button mat-menu-item (click)="deleteUser(element)">
+                            <mat-icon>delete</mat-icon>
+                            <span>Eliminar</span>
+                        </button>
+                    </ng-template>
+                </mat-menu>
+            </td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+
+    <mat-paginator [pageSizeOptions]="[10,25,50]" showFirstLastButtons>
+    </mat-paginator>
+</div>
