--- a/src/app/modules/book/book.component.html
+++ b/src/app/modules/book/book.component.html
@@ -1,1 +1,84 @@
-<p>book works!</p>
+<h1>Libros</h1>
+<div class="d-flex justify-content-between align-items-center">
+    <mat-form-field appearance="outline">
+        <mat-label>Buscar</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Ejm: La odisea" #input>
+        <mat-hint style="color: #a3a3a3;">Buscado por Titulo</mat-hint>
+    </mat-form-field>
+    <mat-form-field appearance="outline">
+        <mat-label>Buscar</mat-label>
+        <input type="number" matInput (keyup)="applyFilter($event)" placeholder="Ejm: 9788437601729" #input>
+        <mat-hint style="color: #a3a3a3;">Buscado por ISBN</mat-hint>
+    </mat-form-field>
+    <div class="d-flex gap-2">
+        <button type="button" class="btn btn-dark" (click)="toggleStatus()">{{txtStatus}}</button>
+        <button type="button" class="btn btn-success" (click)="openSaveModal()" [disabled]="txtStatus=='Activos'">Nuevo Libro</button>
+    </div>
+</div>
+<div class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)">
+        <ng-container matColumnDef="title">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Titulo </th>
+            <td mat-cell *matCellDef="let element"> {{element.title}} </td>
+        </ng-container>
+        <ng-container matColumnDef="stock">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Stock </th>
+            <td mat-cell *matCellDef="let element"> {{element.stock}} </td>
+        </ng-container>
+        <ng-container matColumnDef="isbn">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> ISBN </th>
+            <td mat-cell *matCellDef="let element"> {{element.isbn}} </td>
+        </ng-container>
+        <ng-container matColumnDef="category">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Categoría </th>
+            <td mat-cell *matCellDef="let element"> {{element.category.names}} </td>
+        </ng-container>
+        <ng-container matColumnDef="author">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Autor </th>
+            <td mat-cell *matCellDef="let element"> {{element.author.fullname}} </td>
+        </ng-container>
+        <ng-container matColumnDef="accion">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
+            <td mat-cell *matCellDef="let element">
+                <button mat-icon-button [matMenuTriggerFor]="menu">
+                    <mat-icon>more_vert</mat-icon>
+                </button>
+                <mat-menu #menu="matMenu">
+                    <div *ngIf="txtStatus=='Inactivos'; else btnInactive">
+                        <button mat-menu-item (click)="openSaveModal(element)">
+                            <mat-icon>edit</mat-icon>
+                            <span>Editar</span>
+                        </button>
+                        <button mat-menu-item (click)="removed(element)">
+                            <mat-icon>delete</mat-icon>
+                            <span>Eliminar</span>
+                        </button>
+                    </div>
+                    <ng-template #btnInactive>
+                        <button mat-menu-item (click)="restore(element)">
+                            <mat-icon>restore</mat-icon>
+                            <span>Restaurar</span>
+                        </button>
+                        <button mat-menu-item (click)="deleteUser(element)">
+                            <mat-icon>delete</mat-icon>
+                            <span>Eliminar</span>
+                        </button>
+                    </ng-template>
+                </mat-menu>
+            </td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+
+    <mat-paginator [pageSizeOptions]="[10,25,50]" showFirstLastButtons>
+    </mat-paginator>
+</div>
+<span style="margin-right: 10px;"></span>
+<div class="btn-group" role="group" aria-label="Basic mixed styles example">
+    <button type="button" class="btn btn-info" (click)="exportToExcel()"><i class="fa-solid fa-file-excel"></i> XLS</button>
+</div><span style="margin-right: 10px;"></span>
+<div class="btn-group" role="group" aria-label="Basic mixed styles example">
+    <button type="button" class="btn btn-info" (click)="exportToCSV()"><i class="fa-solid fa-file-csv"></i> CSV</button>
+</div>
+
