--- a/src/app/modules/categories/categories.component.html
+++ b/src/app/modules/categories/categories.component.html
@@ -1,48 +1,21 @@
-<h1>Usuarios</h1>
+<h1>Categorias</h1>
 <div class="d-flex justify-content-between align-items-center">
     <mat-form-field appearance="outline">
         <mat-label>Buscar</mat-label>
-        <input matInput (keyup)="applyFilter($event)" placeholder="Ejm: JUAN" #input>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Ejm: Ciencia" #input>
     </mat-form-field>
     <div class="d-flex gap-2">
         <button type="button" class="btn btn-dark" (click)="toggleStatus()">{{txtStatus}}</button>
-        <button type="button" class="btn btn-success" (click)="openSaveModal()" [disabled]="txtStatus=='Activos'">Nuevo Usuario</button>
+        <button type="button" class="btn btn-success" (click)="openSaveModal()" [disabled]="txtStatus=='Activos'">Nueva Categoria</button>
     </div>
 </div>
 <div class="mat-elevation-z8">
     <table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)">
-        <ng-container matColumnDef="lastName">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Apellidos </th>
-            <td mat-cell *matCellDef="let element"> {{element.lastName | uppercase}} </td>
-        </ng-container>
         <ng-container matColumnDef="names">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre </th>
-            <td mat-cell *matCellDef="let element"> {{element.names | uppercase}} </td>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombres </th>
+            <td mat-cell *matCellDef="let element"> {{element.names}} </td>
         </ng-container>
-        <ng-container matColumnDef="documentType">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Tipo Doc. </th>
-            <td mat-cell *matCellDef="let element"> {{element.documentType}} </td>
-        </ng-container>
-        <ng-container matColumnDef="documentNumber">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Nº Doc. </th>
-            <td mat-cell *matCellDef="let element"> {{element.documentNumber}} </td>
-        </ng-container>
-        <ng-container matColumnDef="ubigeo">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Distrito </th>
-            <td mat-cell *matCellDef="let element"> {{element.ubigeo.district}} </td>
-        </ng-container>
-        <ng-container matColumnDef="email">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Correo Electronico </th>
-            <td mat-cell *matCellDef="let element"> {{element.email}} </td>
-        </ng-container>
-        <ng-container matColumnDef="cellPhone">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Nº Celular </th>
-            <td mat-cell *matCellDef="let element"> {{element.cellPhone}} </td>
-        </ng-container>
-        <ng-container matColumnDef="birthDate">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha Nac. </th>
-            <td mat-cell *matCellDef="let element"> {{element.birthDate | date:'dd/MM/yy'}} </td>
-        </ng-container>
+        
         <ng-container matColumnDef="accion">
             <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
             <td mat-cell *matCellDef="let element">
