--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="bg-body-tertiary text-center text-lg-start">
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
-      © 2023 Copyright:
-        <a class="text-body" href="#">BiblioTech.com</a>
+      © 2024 Copyright:
+        <a class="text-body" href="#">Libros Electrónicos T05</a>
     </div>
 </footer>
