--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,12 +1,14 @@
+
 <div class="sidebar">
     <nav id="sidebar" class="sidebar js-sidebar">
         <div class="sidebar-content js-simplebar">
             <a class="sidebar-brand" routerLink="">
-                <span class="align-middle">BiblioTech</span>
+                <img src="assets/images/digital_book_logo.png" alt="Digital Book" style="width: 60px; height: 60px;">
+                <span class="align-middle">  Digital Book</span>
             </a>
             <ul class="sidebar-nav">
                 <li class="sidebar-header">
-                    General
+                    Administrar
                 </li>
                 <li class="sidebar-item">
                     <a class="sidebar-link" routerLink="">
@@ -19,40 +21,12 @@
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a class="sidebar-link" routerLink="">
+                    <a class="sidebar-link" routerLink="book">
                         <i class="fas fa-book"></i><span class="align-middle">Libros</span>
                     </a>
                 </li>
                 <li class="sidebar-header">
-                    Administrador
-                </li>
-                <li class="sidebar-item">
-                    <a class="sidebar-link" routerLink="loans">
-                        <i class="fas fa-hand-holding"></i><span class="align-middle">Prestamos</span>
-                    </a>
-                </li>
-                <li class="sidebar-item">
-                    <a class="sidebar-link" routerLink="">
-                        <i class="fas fa-key"></i><span class="align-middle">Reservas</span>
-                    </a>
-                </li>
-                <li class="sidebar-header">
-                    Control
-                </li>
-                <li class="sidebar-item">
-                    <a class="sidebar-link" routerLink="">
-                        <i class="fas fa-stream"></i><span class="align-middle">Categorias</span>
-                    </a>
-                </li>
-                <li class="sidebar-item">
-                    <a class="sidebar-link" routerLink="">
-                        <i class="fas fa-pen-fancy"></i><span class="align-middle">Autores</span>
-                    </a>
-                </li>
-                <li class="sidebar-item">
-                    <a class="sidebar-link" routerLink="">
-                        <i class="fas fa-flag"></i><span class="align-middle">Nacionalidades</span>
-                    </a>
+                    Control - Usuarios
                 </li>
                 <li class="sidebar-item">
                     <a class="sidebar-link" routerLink="ubigeos">
@@ -62,6 +36,24 @@
                 <li class="sidebar-item">
                     <a class="sidebar-link" routerLink="roles">
                         <i class="fa-solid fa-unlock"></i><span class="align-middle">Roles</span>
+                    </a>
+                </li>
+                <li class="sidebar-header">
+                    Control - Libros
+                </li>
+                <li class="sidebar-item">
+                    <a class="sidebar-link" routerLink="categories">
+                        <i class="fas fa-stream"></i><span class="align-middle">Categorias</span>
+                    </a>
+                </li>
+                <li class="sidebar-item">
+                    <a class="sidebar-link" routerLink="author">
+                        <i class="fas fa-pen-fancy"></i><span class="align-middle">Autores</span>
+                    </a>
+                </li>
+                <li class="sidebar-item">
+                    <a class="sidebar-link" routerLink="country">
+                        <i class="fas fa-flag"></i><span class="align-middle">Nacionalidades</span>
                     </a>
                 </li>
             </ul>
