--- a/src/app/modules/book/book.component.html
+++ b/src/app/modules/book/book.component.html
@@ -37,6 +37,20 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Autor </th>
             <td mat-cell *matCellDef="let element"> {{element.author.fullname}} </td>
         </ng-container>
+        <ng-container matColumnDef="urldownload">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Link de Descarga </th>
+            <td mat-cell *matCellDef="let element">
+              <a [href]="element.urldownload" target="_blank">{{element.urldownload}}</a>
+              <button mat-icon-button (click)="openPreview(element.urldownload)">
+                <mat-icon>visibility</mat-icon>
+              </button>
+            </td>
+          </ng-container>
+                        
+        <ng-container matColumnDef="description">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Descripción </th>
+            <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+        </ng-container>
         <ng-container matColumnDef="accion">
             <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
             <td mat-cell *matCellDef="let element">
